# slurmworm

./: .gitattributes  .gitignore  MANIFEST.in  README.md  setup.cfg  setup.py
slurmworm/: __init__.py  _version.py  bot.py  imap_monitor.py  package_utils.py
