[aliases]
test=pytest

[metadata]
name = slurmworm
description = A simple listener to monitor slurm jobs
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/grburgess/slurmworm
author_email = jmichaelburgess@gmail.com
author = J. Michael Burgess
requires_python = >=3.6.0


project_urls =
    Bug Tracker = https://github.com/grburgess/slurmworm/issues
    Source Code = https://github.com/grburgess/slurmworm


[options]
packages = find:
install_requires =
    python-telegram-bot
    imapclient
    configparser
    eventlet
    rich
    

    
tests_require =
    pytest
    pytest-codecov



[versioneer]
VCS=git
style=pep440
versionfile_source=slurmworm/_version.py
versionfile_build=slurmworm/_version.py
tag_prefix=v
parentdir_prefix=slurmworm-
